chore(ci): harden Windows pre-fix actions and npm install
- add python launcher fallbacks (py -3 → python → python3) for actionlint/ascii pre-fix
- switch npm install to --ignore-scripts --omit=optional to avoid native builds
- update ci.yml to use hardened install where naked npm ci existed

Refs: ADR-0005-quality-gates, ADR-0011-windows-only-platform-and-ci

--- a/.github/actions/npm-install/action.yml
+++ b/.github/actions/npm-install/action.yml
@@ -69,7 +69,8 @@ runs:
           $psi = New-Object System.Diagnostics.ProcessStartInfo
           $psi.FileName = $npmExecutable
           $psi.WorkingDirectory = (Get-Location).Path
-          $psi.Arguments = "ci $extraArgs"
+          # Avoid native builds and postinstall scripts in CI to improve stability on Windows runners
+          $psi.Arguments = "ci --ignore-scripts --omit=optional $extraArgs"
           $psi.RedirectStandardOutput = $true
           $psi.RedirectStandardError = $true
           $psi.UseShellExecute = $false
