--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -311,8 +311,8 @@ jobs:
         with:
           distribution: temurin
           java-version: '17'
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (no scripts / omit optional)
+        run: npm ci --ignore-scripts --omit=optional
       - name: Run tests with coverage (lcov)
         run: npm run test:coverage
         env:
@@ -703,8 +703,8 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (no scripts / omit optional)
+        run: npm ci --ignore-scripts --omit=optional
       - name: Run perf smoke and capture output
         env:
           START_TTI_WARN_MS: ${{ vars.START_TTI_WARN_MS || '2500' }}
