ci(e2e): install Playwright browsers in electron-security-gate
Fix regression caused by npm ci --ignore-scripts: ensure Playwright browsers are installed before Playwright-based security E2E runs.

Refs: ADR-0005-quality-gates, ADR-0011-windows-only-platform-and-ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -545,6 +545,10 @@ jobs:
       - name: Install dependencies
         uses: ./.github/actions/npm-install
 
+      # Ensure Playwright browsers are available (Windows runners)
+      - name: Setup Playwright browsers cache
+        uses: microsoft/playwright-github-action@v1
+
       - name: npm audit-ci (block on main)
         run: npx --yes audit-ci --high --critical -c audit-ci.json
         continue-on-error: ${{ github.ref != 'refs/heads/main' }}
