--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,6 +1,12 @@
 name: Build & Test
 
 on:
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Manual trigger reason'
+        required: false
+        type: string
   pull_request:
   push:
     branches: [main]
@@ -8,6 +14,7 @@ on:
       - 'src/**'
       - 'electron/**'
       - 'tests/**'
+      - 'scripts/**'
       - 'package.json'
       - 'package-lock.json'
       - 'tsconfig*.json'
@@ -15,7 +22,7 @@ on:
       - 'vitest.config.ts'
       - 'playwright.config.ts'
       - '.github/actions/**'
-      - '.github/workflows/build-and-test.yml'
+      - '.github/workflows/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
