ci(validate-workflows): ensure Python is available for python-shell steps
- add actions/setup-python@v5 before python-shell usage to avoid missing interpreter on Windows runners

Refs: ADR-0005-quality-gates, ADR-0011-windows-only-platform-and-ci

--- a/.github/workflows/validate-workflows.yml
+++ b/.github/workflows/validate-workflows.yml
@@ -36,6 +36,10 @@ jobs:
         shell: pwsh
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Python 3.x
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
       - name: Ensure shellcheck (Windows fallback)
         if: runner.os == 'Windows'
         shell: python
@@ -95,6 +99,10 @@ jobs:
         shell: pwsh
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Python 3.x
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
       - name: Ensure shellcheck (Windows fallback)
         if: runner.os == 'Windows'
         shell: python
