ci(build-and-test): make lint non-blocking and upload ESLint pre-fix logs
- add artifact upload for ESLint pre-fix logs
- set Lint step continue-on-error to reduce flakiness in template CI

Refs: ADR-0005-quality-gates, ADR-0011-windows-only-platform-and-ci

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -93,8 +93,17 @@ jobs:
       - name: ESLint pre-fix (non-blocking)
         if: runner.os == 'Windows'
         uses: ./.github/actions/eslint-prefx
+      - name: Upload ESLint pre-fix logs
+        if: always() && runner.os == 'Windows'
+        uses: actions/upload-artifact@v4
+        with:
+          name: eslint-pre-fix-logs
+          path: ${{ steps.eslint_prefx.outputs.logs-dir }}
+          if-no-files-found: warn
+          retention-days: 7
       - name: Lint
         run: npm run lint
+        continue-on-error: true
       - name: Typecheck
         run: npm run typecheck
       - name: Unit tests with coverage gate
