ci(install): align npm-install behavior with working template
- npm-install now runs plain
pm ci (no --ignore-scripts/--omit=optional)
- replace remaining raw npm ci in ci.yml with composite action usage
- keep explicit Playwright install where required on Windows

Borrowed behavior from sibling template (read-only reference)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -311,8 +311,8 @@ jobs:
         with:
           distribution: temurin
           java-version: '17'
-      - name: Install dependencies (no scripts / omit optional)
-        run: npm ci --ignore-scripts --omit=optional
+      - name: Install dependencies
+        uses: ./.github/actions/npm-install
       - name: Run tests with coverage (lcov)
         run: npm run test:coverage
         env:
@@ -707,8 +707,8 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'npm'
-      - name: Install dependencies (no scripts / omit optional)
-        run: npm ci --ignore-scripts --omit=optional
+      - name: Install dependencies
+        uses: ./.github/actions/npm-install
       - name: Run perf smoke and capture output
         env:
           START_TTI_WARN_MS: ${{ vars.START_TTI_WARN_MS || '2500' }}
