--- a/.github/actions/npm-install/action.yml
+++ b/.github/actions/npm-install/action.yml
@@ -69,8 +69,8 @@ runs:
           $psi = New-Object System.Diagnostics.ProcessStartInfo
           $psi.FileName = $npmExecutable
           $psi.WorkingDirectory = (Get-Location).Path
-          # Avoid native builds and postinstall scripts in CI to improve stability on Windows runners
-          $psi.Arguments = "ci --ignore-scripts --omit=optional $extraArgs"
+          # Align with stable template (vitegame): allow postinstall scripts to run unless overridden
+          $psi.Arguments = "ci $extraArgs"
           $psi.RedirectStandardOutput = $true
           $psi.RedirectStandardError = $true
           $psi.UseShellExecute = $false
