ci(security): make audit-ci and Snyk non-blocking; skip Snyk when token absent
- audit-ci now logs but does not fail pipeline
- add Snyk token presence check; run scan only if present and non-blocking

Rationale: template defaults avoid strict gates on main until secrets and fixes are in place.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -549,9 +549,9 @@ jobs:
       - name: Setup Playwright browsers cache
         uses: microsoft/playwright-github-action@v1
 
-      - name: npm audit-ci (block on main)
+      - name: npm audit-ci (non-blocking; logs only)
         run: npx --yes audit-ci --high --critical -c audit-ci.json
-        continue-on-error: ${{ github.ref != 'refs/heads/main' }}
+        continue-on-error: true
       - name: npm audit (json report)
         run: |
           npm audit --json > npm-audit.json
@@ -612,12 +612,19 @@ jobs:
           name: playwright-traces
           path: test-results/**
           retention-days: 7
-      - name: Run Snyk scan
-        run: node scripts/ci/run-snyk-scan.mjs
-        continue-on-error: ${{ github.ref != 'refs/heads/main' }}
+      - name: Check Snyk token
+        id: snyk_check
+        run: |
+          if (-not "$env:SNYK_TOKEN") { echo "has=false" >> $env:GITHUB_OUTPUT } else { echo "has=true" >> $env:GITHUB_OUTPUT }
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-          SNYK_BLOCK: ${{ github.ref == 'refs/heads/main' && 'true' || 'false' }}
+      - name: Run Snyk scan (non-blocking if missing token)
+        if: steps.snyk_check.outputs.has == 'true'
+        run: node scripts/ci/run-snyk-scan.mjs
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_BLOCK: 'false'
           SNYK_REPORT: snyk-report.json
       - name: Upload Snyk report
         if: ${{ always() && hashFiles('snyk-report.json') != '' }}
