ci(build-and-test): make typecheck and coverage gate non-blocking for template stability
- add continue-on-error to Typecheck and Unit tests with coverage gate
- leave strict gates in ci.yml; build-and-test stays advisory

Refs: ADR-0005-quality-gates (template soft mode)

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -125,7 +125,9 @@ jobs:
         continue-on-error: true
       - name: Typecheck
         run: npm run typecheck
+        continue-on-error: true
       - name: Unit tests with coverage gate
+        continue-on-error: true
         env:
           COVERAGE_MODE: development
           NODE_ENV: test
