ci(build-and-test): fix ESLint pre-fix logs upload (missing id, add fallback)
- add step id: eslint_prefx so outputs are available
- guard upload on non-empty output; add fallback glob with warn

Fixes: artifact upload failure at 'Upload ESLint pre-fix logs'

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -115,13 +115,22 @@ jobs:
           python-version: '3.x'
       - name: ESLint pre-fix (non-blocking)
         if: runner.os == 'Windows'
+        id: eslint_prefx
         uses: ./.github/actions/eslint-prefx
       - name: Upload ESLint pre-fix logs
-        if: always() && runner.os == 'Windows'
+        if: always() && runner.os == 'Windows' && steps.eslint_prefx.outputs.logs-dir != ''
         uses: actions/upload-artifact@v4
         with:
           name: eslint-pre-fix-logs
           path: ${{ steps.eslint_prefx.outputs.logs-dir }}
+          if-no-files-found: warn
+          retention-days: 7
+      - name: Upload ESLint pre-fix logs (fallback glob)
+        if: always() && runner.os == 'Windows' && steps.eslint_prefx.outputs.logs-dir == ''
+        uses: actions/upload-artifact@v4
+        with:
+          name: eslint-pre-fix-logs-fallback
+          path: logs/*/eslint
           if-no-files-found: warn
           retention-days: 7
       - name: Lint
